<resources>
    <string name="app_name">MicroBS</string>
    <string name="title_zaposleni">Zaposleni</string>
    <string name="title_kupac">Kupac</string>
    <string name="title_weather">Weather</string>
    <string name="add_zaposleni">Add zaposleni</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Uloguj se</string>
    <string name="action_register_short">Registracija</string>
    <string name="lb_ime">Ime</string>
    <string name="lb_username">Korisnicko ime</string>
    <string name="lb_password">Sifra</string>
    <string name="action_add_zaposleni">Dodaj Zaposlenog</string>
    <string name="add">Add</string>
    <string name="error_ime">Ime ne sme biti prazno</string>
    <string name="error_username">Korisnicko ime ne sme biti prazno</string>
    <string name="error_password">Sifra ne sme biti prazna</string>
    <string name="error_password_length">Sifra mora sadrzati bar 5 karaktera</string>
    <string name="success_add_zaposleni">Uspesno dodat zaposleni</string>
    <string name="success_add_korisnik">Uspesna registracija</string>
    <string name="lb_prezime">Prezime</string>
    <string name="lb_sifra">Sifra</string>
    <string name="lb_grad">Grad</string>
    <string name="lb_magacin">Magacin</string>
    <string name="error_prezime">Prezime ne sme biti prazno</string>
    <string name="error_sifra">Sifra ne sme biti prazna</string>
    <string name="error_grad">Grad ne sme biti prazan</string>
    <string name="error_magacin">Magacin ne sme biti prazan</string>
    <string name="ime_i_prezime">Ime i prezime</string>
    <string name="success_add_kupac">Uspesno dodat kupac</string>
    <string name="lb_pib">PIB</string>
    <string name="lb_naziv">Naziv</string>
    <string name="lb_zaposleni">Zaposleni</string>
    <string name="add_kupac">Add kupac</string>
    <string name="error_zaposleni">Molimo odaberite zaposlenog</string>
    <string name="error_pib">PIB ne sme biti prazan</string>
    <string name="error_naziv">Naziv ne sme biti prazan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_button">More button</string>
    <string name="title_delete_zaposleni">Upozorenje</string>
    <string name="ne">NE</string>
    <string name="da">DA</string>
    <string name="success_update_kupac">Uspesno promenjen kupac</string>
    <string name="update">update</string>
    <string name="combobox">combobox</string>
    <string name="fail_add_zaposleni">Sifra zaposlenog vec postoji</string>
    <string name="lb_weather_grad">Grad</string>
    <string name="lb_weather_trenutna">Trenutno vreme</string>
    <string name="lb_weather_naredna">U narednim danima</string>
    <string name="lb_weather_datum">Datum</string>
    <string name="lb_weather_min">Min temp</string>
    <string name="lb_weather_max">Max temp</string>
    <string name="lb_not_loaded">Nije moguce ucitati podatke sa servera</string>
    <string name="cancel">cancel</string>
    <string name="canceled_add_korisnik">Otkazana registracija</string>
    <string name="exists_username">Username vec postoji</string>
    <string name="success_login">Uspesno logovanje</string>
    <string name="error_login">Pogresna sifra ili username</string>
    <string name="error_sifra_unique">Zaposleni sa ovom sifrom postoji u bazi</string>
    <string name="filtriraj_kupca">Filtriraj po zaposlenom:</string>
    <string name="edit_kupac">Promeni</string>
    <string name="delete_kupac">Obrisi</string>
</resources>